--- a/infinite-ai-main/tsconfig.json
+++ b/infinite-ai-main/tsconfig.json
@@ -1,15 +1,21 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "module": "esnext",
     "moduleResolution": "bundler",
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "resolveJsonModule": true,
+    "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["app"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
